<resources>
    <string name="app_name">Favorite Movies</string>
    <string name="movie_image">Movie Image</string>
    <string name="star_icon">Star icon</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="sort">Sort</string>
    <string name="top_rated">Top rated</string>
    <string name="popular">Popular</string>
    <string name="bluredbackground">bluredBackground</string>
    <string name="backbutton">backButton</string>
    <string name="toolbar">toolbar</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="favorite_icon">favorite icon</string>
    <string name="isfavorite">isFavorite</string>
    <string name="favorites">Favorites</string>
    <string name="play_button">play button</string>
    <string name="ad_image">ad_image</string>
</resources>
