<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort_main"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/sort_popular"
                android:checkable="true"
                android:checked="true"
                android:icon="@drawable/ic_star"
                android:title="@string/popular"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/sort_topRated"
                android:checkable="true"
                android:title="@string/top_rated"
                android:icon="@drawable/ic_swap_vert"
                app:showAsAction="collapseActionView"/>
            <item
                android:id="@+id/list_favorite"
                android:checkable="true"
                android:icon="@drawable/ic_favorite_primary"
                android:title="@string/favorites"
                app:showAsAction="collapseActionView" />
        </menu>
    </item>
</menu>