<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop">
        <ImageView
            android:id="@+id/blured_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/bluredbackground"
            android:scaleType="centerCrop"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/deadpool_example"
            app:layout_constraintBottom_toTopOf="@+id/title_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/poster_image_view"
            android:transitionName="posterTransition"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/deadpool_example" />

        <TextView
            android:id="@+id/title_text_view"
            android:transitionName="titleTransition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Deadpool"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/poster_image_view" />

        <ImageView
            android:contentDescription="@string/calendar_icon"
            android:id="@+id/date_image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_calendar"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="0dp"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="2017-0-0"
            app:layout_constraintTop_toTopOf="@+id/date_image_view"
            app:layout_constraintBottom_toBottomOf="@+id/date_image_view"
            app:layout_constraintLeft_toRightOf="@+id/date_image_view"
            android:layout_marginStart="8dp"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/overview_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_image_view"
            android:paddingBottom="16dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="К концу подходит время благоденствия, и лето, длившееся почти десятилетие, угасает. Вокруг средоточия власти Семи королевств, Железного трона, зреет заговор, и в это непростое время король решает искать поддержки у друга юности Эддарда Старка. В мире, где все — от короля до наемника — рвутся к власти, плетут интриги и готовы вонзить нож в спину, есть место и благородству, состраданию и любви. Между тем, никто не замечает пробуждение тьмы из легенд далеко на Севере — и лишь Стена защищает живых к югу от нее."
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:contentDescription="@string/star_icon"
            android:transitionName="rateImageTransition"
            android:id="@+id/star_image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:srcCompat="@drawable/ic_star"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_text_view" />

        <TextView
            android:id="@+id/rate_text_view"
            android:transitionName="rateTextTransition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textColor="@android:color/black"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@+id/star_image_view"
            app:layout_constraintRight_toLeftOf="@+id/star_image_view"
            app:layout_constraintTop_toTopOf="@+id/star_image_view"
            tools:text="10" />

        <ImageButton
            android:id="@+id/backArrow"
            android:contentDescription="@string/backbutton"
            android:clickable="true"
            android:background="@drawable/ic_circle"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_arrow"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/favorite_button"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/blured_image_view"
            app:layout_constraintLeft_toRightOf="@+id/poster_image_view"
            app:layout_constraintRight_toRightOf="parent">

            <RelativeLayout
                android:background="#77FFC107"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/favorite_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/favorite_icon"
                    app:srcCompat="@drawable/ic_unfavorite" />

                <TextView
                    android:id="@+id/favorite_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_toStartOf="@id/favorite_image_view"
                    android:gravity="center"
                    android:text="@string/add_to_favorite"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>